--- a/Project2-Diabetes-Patients/DIABETES_PREDICTION.ipynb
+++ b/Project2-Diabetes-Patients/DIABETES_PREDICTION.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "\n",
     "# **OBJECTIVE**\n",
-    "In this project, our goal was to develop a classification model for a diabetes dataset. The aim was to create a model that could accurately predict whether a person is sick or not. We strived to achieve the highest possible validation score for the established model. Ultimately, our objective was to build a machine-learning model that could make precise predictions. The model would help us identify whether the patients in the dataset have diabetes or not.\n"
+    "In this project, our goal is to develop a classification model for a diabetes dataset. We aim to create a model that could accurately predict whether a person is sick or not. We will strive to achieve the highest possible validation score for the established model. Ultimately, our objective is to build a machine-learning model that can make precise predictions. The model would help us identify whether the patients in the dataset have diabetes or not.\n"
    ]
   },
   {
